<resources>
    <string name="app_name">BeetClock</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_work_summary">WorkSummary</string>
    <string name="title_activity_crop_list">CropList</string>

    <!-- Main strings -->
    <string name="crops">Select your crop:</string>
    <string name="jobs">Select your job:</string>
    <string name="equipment">Add equipment (optional):</string>
    <string name="button_start">Start timer</string>
    <string name="button_stop">Stop work</string>
    <string name="button_add">Add</string>
    <string name="button_remove">Remove</string>
    <string name="number_workers">Number of workers:</string>
    <string name="workers">(Default = 1)</string>
    <string name="new_timer">Start new timer: </string>



<!-- CropList strings -->
    <string name="cropsManage">Manage crops:</string>
    <string name="jobsManage">Manage jobs:</string>
    <string name="machineManage">Manage equipment:</string>
    <string name="clearRecords">Clear records:</string>
    <string name="button_addcrop">Add crop</string>
    <string name="button_addjob">Add job</string>
    <string name="button_addmachine">Add equipment</string>
    <string name="new_crop">Enter crop name, ex: Beets</string>
    <string name="new_job">Enter name of job to add</string>
    <string name="new_machine">Enter name, ex: Tiller</string>
    <string name="button_deletecrop">Delete crop</string>
    <string name="button_deletejob">Delete job</string>
    <string name="button_deletemachine">Delete equipment</string>
    <string name="crop_add_title">Add a crop</string>
    <string name="crop_delete_title">Delete a crop</string>




<!-- Mange records strings-->
    <string name="export">Export records:</string>
    <string name="export_exp">Saves all records to a .csv file in the \"Downloads\" folder</string>
    <string name="button_export">Export all records to file</string>
    <string name="importrecords">Import records:</string>
    <string name="importrecords_exp">Import records from a .csv file in the \"Downloads\" folder.</string>
    <string name="edit_import">To authorize import, type \"import\" here</string>
    <string name="button_import">Import records</string>
    <string name="edit_delete">To delete records, enter \"delete\"</string>
    <string name="button_cleartimes">Delete records</string>
    <string name="title_getEquip">Get equipment from NOFA workbook</string>
    <string name="exp_getEquip">This will erase all existing equipment</string>
    <string name="button_getEquip">Get equipment</string>
    <string name="delete_indiv">Delete individual records</string>
    <string name="import_warning">Warning: Import will clear all existing entries!</string>
    <string name="import_select">Select a file to import:</string>
    <string name="import_confirm">Confirm import:</string>

    <!-- PopulateSheet strings -->
    <string name="chooseFile">Choose file in Google Drive:</string>
    <string name="chooseSheet">Choose sheet in file:</string>
    <string name="chooseCrop">Add records for crop...</string>
    <string name="chooseStartDate">Starting from date...</string>
    <string name="button_getSheets">Open file</string>
    <string name="button_popSheet">Write to workbook</string>

    <!-- WorkSummary and SendReport strings -->
    <string name="button_makesummary">View crop summary</string>
    <string name="button_makerecords">View all records</string>

    <string name="button_sendreport">Send report</string>
    <string name="button_pickDate">Select a new date</string>
    <string name="button_datePicked">Select date</string>
    <string name="cropsSum">Select a crop to summarize</string>

    <!-- Menu Strings -->
    <string name="timer_bar">Work timer</string>
    <string name="crop_bar">Manage crops</string>
    <string name="summary_bar">View records</string>
    <string name="report_bar">Email report</string>
    <string name="sheet_bar">Fill NOFA workbook</string>
    <string name="feedback_bar">Submit feedback</string>
    <string name="timeworked_bar">Enter time worked</string>
    <string name="job_bar">Manage jobs</string>
    <string name="equip_bar">Manage equipment</string>
    <string name="record_bar">Manage records</string>

    <!-- TimeWorked Strings -->
    <string name="edit_hours">Enter number of hours worked</string>
    <string name="edit_workers">Enter number of workers</string>
    <string name="current_date">On current date, or...</string>
    <string name="button_Save">Log job</string>
    <string name="hours_worked">Hours worked:</string>
    <string name="hours_hint"># Hours</string>
    <string name="workers_worked">Number of workers (default = 1)</string>
    <string name="title_jobLog">Log completed job:</string>

    <string name="title_activity_display_summary">DisplaySummary</string>

    <!--email report-->
    <string name="label_reportStart">Choose your report start date:</string>
    <string name="label_reportSender">Send as...</string>
    <string name="label_reportRecipient">Mail to...</string>
    <string name="report_sender">Enter your name and organization</string>
    <string name="report_address">report_recipient@example.com</string>
    <string name="title_activity_pick_date">PickDate</string>

    <!--send feedback-->
    <string name="title_activity_send_feedback">SendFeedback</string>
    <string name="button_sendFeedback">Submit feedback</string>
    <string name="edit_feedback">Tell us what you think about BeetClock!</string>
    <string name="edit_feedbackEmail">myname@example.com</string>
    <string name="title_feedbackEmail">Email:</string>
    <string name="title_feedbackContent">Comments:</string>


    <string name="title_activity_edit_sheet">Edit Sheet</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="signed_in_fmt">Signed In</string>
    <string name="loading">Loading</string>
    <string name="signed_out">Signed out</string>

    <string name="title_fillsheet">Writing spreadsheet</string>
    <string name="title_activity_do_oauth2">DoOauth2</string>
    <string name="title_activity_do_script_execute">DoScriptExecute</string>
    <string name="title_activity_time_worked">TimeWorked</string>
    <string name="title_activity_populate_sheet">PopulateSheet</string>
    <string name="title_activity_send_report">SendReport</string>
    <string name="title_activity_manage_jobs">ManageJobs</string>
    <string name="title_activity_manage_equipment">ManageEquipment</string>
    <string name="title_activity_manage_records">ManageRecords</string>
    <string name="title_activity_delete_records">DeleteRecords</string>


</resources>
