<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_manage_records" tools:context="aas.beetclock.ManageRecords"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--content container-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_margin">

        <!--delete records menu-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/layout_bumper">

            <TextView
                android:text="@string/delete_indiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/title"
                android:layout_marginBottom="@dimen/layout_bumper" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_indiv"
                android:onClick="deleteIndiv"
                style="@style/buttonFlat"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/divider"/>

        <!--Export records menu-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/layout_bumper">

            <TextView
                android:text="@string/export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/title"/>

            <TextView
                android:text="@string/export_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body" />

                    <Button
                        android:onClick="exportDb"
                        android:text="@string/button_export"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_publish"
                        android:drawablePadding="@dimen/layout_bumper"
                        style="@style/buttonFlat" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/divider"/>

        <!--import records menu-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/layout_bumper">

            <TextView
                android:text="@string/importrecords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/title" />

            <TextView
                android:text="@string/importrecords_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/body" />

            <TextView
                android:text="@string/import_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/subhead" />

             <Spinner
                android:id="@+id/bcfiles_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/spinner" />

            <TextView
                android:text="@string/import_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/subhead" />

            <!--warning box-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/warning_box">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/layout_bumper"
                    android:src="@drawable/ic_error_outline"
                    android:tint="@color/warning" />

                <TextView
                    android:text="@string/import_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/warning_text"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_import"
                android:hint="@string/edit_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/indent"
                android:minWidth="@dimen/menu_item_width5"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:layout_weight="1"
                android:textColor="@color/colorAccent" />

            <Button
                android:onClick="importDb"
                android:text="@string/button_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_file_download"
                android:drawablePadding="@dimen/layout_bumper"
                style="@style/buttonFlat" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

