<?xml version="1.0" encoding="utf-8"?>

<!--background image-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bcbg" />

<!--PARENT VIEW-->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="@layout/activity_main" tools:context=".MainActivity"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--android:background="@drawable/bg_placeholder"-->

        <!--Main content container-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|fill_vertical"
            style="@style/menu_box_trans">

            <!--Container for timer buttons generated by onPostExecute function. Do not delete!-->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/clock_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--Timer buttons go here-->
            </LinearLayout>

            <!--Menu title-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_timer"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/title" />

            <!--Crop selector-->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/crop_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/layout_bumper">

                <TextView
                    android:text="@string/crops"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/subhead" />

                <Spinner
                    android:id="@+id/crop_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/spinner" />

            </LinearLayout>

            <!--Job selector-->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/layout_bumper">

                <TextView
                    android:text="@string/jobs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/subhead" />

                <Spinner
                    android:id="@+id/jobs_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/spinner" />

            </LinearLayout>

            <!--Workers selector-->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/layout_bumper">

                <TextView
                    android:text="@string/number_workers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/subhead" />

                <EditText android:id="@+id/edit_number_workers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/workers"
                    android:inputType="number" />

            </LinearLayout>

            <!--Equipment selector-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/layout_bumper">

                <TextView
                    android:id="@+id/equip_title"
                    android:text="@string/equipment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/subhead" />

                <!--horizontal container-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/equip_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/layout_bumper"
                        style="@style/spinner" />

                    <ImageButton
                        android:onClick="addEquip"
                        android:src="@drawable/ic_action_add"
                        android:contentDescription="@string/button_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        style="@style/buttonGraphic" />

                </LinearLayout>

            </LinearLayout>

            <!--Start button-->
            <Button
                android:onClick="startTime"
                android:text="@string/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/buttonTimer" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>


