<?xml version="1.0" encoding="utf-8"?>

<!--background image-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bcbg" />

    <!--content container-->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="@layout/activity_send_feedback" tools:context="aas.beetclock.SendFeedback"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_margin"
        style='@style/menu_box_trans'>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/layout_bumper">

            <TextView
                android:text="@string/title_feedbackEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/subhead" />

            <EditText
                android:id="@+id/edit_feedbackEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_feedbackEmail"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:background="@color/colorBackground"
                android:padding="@dimen/key_menu_padding"
                style="@style/input" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/layout_bumper">

            <TextView
                android:text="@string/title_feedbackContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/subhead" />

            <EditText android:id="@+id/edit_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_feedback"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:maxLines="10"
                android:gravity="top|left"
                android:overScrollMode="ifContentScrolls"
                android:background="@color/colorBackground"
                android:padding="@dimen/key_menu_padding"
                style="@style/input" />

        </LinearLayout>


            <Button
                android:onClick="sendFeedback"
                android:text="@string/button_sendFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/key_padding"
                style="@style/buttonRaised" />


    </LinearLayout>

    </ScrollView>

</FrameLayout>