<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_work_summary" tools:context="aas.beetclock.WorkSummary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--content container-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <!-- select date -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/layout_bumper">

            <!--set by onActivityResult-->
            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/subhead" />

            <Button
                android:onClick="openDatePicker"
                android:text="@string/button_pickDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_today"
                android:drawablePadding="@dimen/key_menu_padding"
                style="@style/buttonFlat" />

        </LinearLayout>

        <!--select crop-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/layout_bumper">

            <TextView
                android:text="@string/cropsSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_bumper"
                style="@style/subhead"/>

            <Spinner
                android:id="@+id/crop_report_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/spinner" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/layout_bumper_wide">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_bumper"
                android:text="@string/button_makesummary"
                android:onClick="displayReport"
                style="@style/buttonFlat" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_makerecords"
                android:onClick="displayRecords"
                style="@style/buttonFlat" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

